// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a card to the CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "category": "Consumable",
      "cost": Object {
        "kind": "Money",
        "value": 1,
      },
      "description": "Heal 1, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "gainedCard": null,
          "kind": "Basic",
          "value": 1,
        },
        Object {
          "category": "Trash Self",
          "gainedCard": null,
          "kind": "Basic",
          "value": 0,
        },
      ],
      "id": "apple",
      "isPlayed": false,
      "name": "Apple",
      "subcategories": Array [
        "Food",
      ],
      "uniqid": "mock-id",
    },
    Object {
      "category": "Consumable",
      "cost": Object {
        "kind": "Money",
        "value": 2,
      },
      "description": "Heal 2, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "gainedCard": null,
          "kind": "Basic",
          "value": 2,
        },
        Object {
          "category": "Trash Self",
          "gainedCard": null,
          "kind": "Basic",
          "value": 0,
        },
      ],
      "id": "bread",
      "isPlayed": false,
      "name": "Bread",
      "subcategories": Array [
        "Food",
      ],
      "uniqid": "mock-id-2",
    },
  ],
}
`;

exports[`creates a Card 1`] = `
Object {
  "category": "Consumable",
  "cost": Object {
    "kind": "Money",
    "value": 1,
  },
  "description": "Heal 1, Trash this card",
  "effects": Array [
    Object {
      "category": "Heal",
      "gainedCard": null,
      "kind": "Basic",
      "value": 1,
    },
    Object {
      "category": "Trash Self",
      "gainedCard": null,
      "kind": "Basic",
      "value": 0,
    },
  ],
  "id": "apple",
  "isPlayed": false,
  "name": "Apple",
  "subcategories": Array [
    "Food",
  ],
  "uniqid": "mock-id",
}
`;

exports[`creates a CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "category": "Consumable",
      "cost": Object {
        "kind": "Money",
        "value": 1,
      },
      "description": "Heal 1, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "gainedCard": null,
          "kind": "Basic",
          "value": 1,
        },
        Object {
          "category": "Trash Self",
          "gainedCard": null,
          "kind": "Basic",
          "value": 0,
        },
      ],
      "id": "apple",
      "isPlayed": false,
      "name": "Apple",
      "subcategories": Array [
        "Food",
      ],
      "uniqid": "mock-id",
    },
  ],
}
`;

exports[`removes a card from the CardStack 1`] = `
Object {
  "cards": Array [],
}
`;
